# BACKEND_SERVICES

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2023-10-07-083133_create_rustaceans/: up.sql
migrations/2023-10-07-083157_create_crates/: down.sql  up.sql
migrations/2023-10-10-130526_create_users/: up.sql
migrations/2023-10-10-130603_create_roles/: up.sql
migrations/2023-10-10-130614_create_users_roles/: up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
