[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
chrono = { version = "0.4.0", features = ["serde"] }