[package]
name = "cr8s"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_postgres_pool"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["deadpool_redis"] }
serde = { version = "1.0.0", features = ["derive"] }
# For decoupling the tests from 'rocket'
serde_json = "1.0.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
chrono = { version = "0.4.0", features = ["serde"] }
log = "0.4"
# Crate for creating CLI commands
clap = "4.2"
# Crate for hashing
argon2 = "0.5.0"
rand = "0.8.0"
tera = "1"
lettre = "0.10.0"



[dev-dependencies]
# For guarantteed order of operations, include the 'blocking' feature in short, do away with default async behavior
reqwest = { version = "0.11", features = ["json", "blocking"] }